MongoDB, login status bar, error handling

--- a/src/main/webapp/restapi/data.html
+++ b/src/main/webapp/restapi/data.html
@@ -75,6 +75,30 @@
     </tr>
   </thead>
   <tbody data-link="row" class="rowlink">
+    <tr class="clickable-row" data-href="json_Address.html">
+      <td>  <span class="datatype-name">Address</span>
+</td>
+      <td>  <span class="datatype-description">2018-12-21</span>
+</td>
+    </tr>
+    <tr class="clickable-row" data-href="json_DAOBean.html">
+      <td>  <span class="datatype-name">DAOBean</span>
+</td>
+      <td>  <span class="datatype-description">2018-12-21</span>
+</td>
+    </tr>
+    <tr class="clickable-row" data-href="json_Email.html">
+      <td>  <span class="datatype-name">Email</span>
+</td>
+      <td>  <span class="datatype-description">2018-12-21</span>
+</td>
+    </tr>
+    <tr class="clickable-row" data-href="json_Phone.html">
+      <td>  <span class="datatype-name">Phone</span>
+</td>
+      <td>  <span class="datatype-description">2018-12-21</span>
+</td>
+    </tr>
     <tr class="clickable-row" data-href="json_User.html">
       <td>  <span class="datatype-name">User</span>
 </td>
