--- a/src/main/webapp/restapi/json_Phone.html
+++ b/src/main/webapp/restapi/json_Phone.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-  <title>Angular CRUD REST API: Resources</title>
+  <title>Angular CRUD REST API: Phone</title>
 
   <!-- Mobile viewport optimized: j.mp/bplateviewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,7 +35,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Angular CRUD REST API: Resources</a>
+        <a class="navbar-brand" href="index.html">Angular CRUD REST API: Phone</a>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -58,50 +58,94 @@
       <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
         <ol class="breadcrumb" id="top">
           <li class="active dropdown"><a href="index.html">Home</a></li>
-          <li class="dropdown"><a href="resources.html">Resources</a></li>
+          <li class="active dropdown"><a href="syntax_json.html">JSON</a></li>
+          <li class="dropdown"><a href="json_Phone.html">Phone</a></li>
         </ol>
 
-  <h1 class="page-header" id="resources">Resources</h1>
+      <h1 class="page-header">Phone <small>Data Type</small></h1>
 
-  <p>
-    The resources use a data model that is supported by a set of client-side libraries that are made available on the
-    <a href="downloads.html">files and libraries</a> page.
-  </p>
-  <p>
-    There is a <a href="application.wadl">WADL document</a> available that describes the resources API.
-  </p>
-  <p>
-    You may also enjoy the <a href="ui/index.html">interactive interface</a> provided for this API by <a href="http://swagger.io">Swagger</a>.
-  </p>
-  <p>
-    <a href="ui/index.html" class="btn btn-default">Try it out!</a>
-  </p>
-  <table class="table table-hover resources">
-    <thead>
-    <tr>
-      <th align="center">name</th>
-      <th align="center">path</th>
-      <th align="center">methods</th>
-      <th align="center">description</th>
-    </tr>
-    </thead>
-    <tbody data-link="row" class="rowlink">
-    <tr class="clickable-row" data-href="resource_UserEndpoint.html">
-      <td>  <span class="resource-name">UserEndpoint</span>
+      <p>2018-12-21</p>
+
+      <dl class="dl-horizontal">
+      </dl>
+
+      <table class="table datatype-properties">
+        <caption>Properties</caption>
+        <thead>
+        <tr>
+          <th>name</th>
+          <th>data type</th>
+          <th>description</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>  <span class="property-name">phoneId</span>
 </td>
-      <td class="text-nowrap"><ul class="list-unstyled"><li><samp>  <span class="resource-path">/user</span>
-</samp></li><li><samp>  <span class="resource-path">/user/login</span>
-</samp></li><li><samp>  <span class="resource-path">/user/{userId}</span>
-</samp></li></ul></td>
-      <td class="text-nowrap"><ul class="list-unstyled"><li><samp>  <span class="label label-default resource-method">GET</span> <span class="label label-default resource-method">POST</span> <span class="label label-default resource-method">PUT</span> 
-</samp></li><li><samp>  <span class="label label-default resource-method">POST</span> 
-</samp></li><li><samp>  <span class="label label-default resource-method">DELETE</span> <span class="label label-default resource-method">GET</span> 
-</samp></li></ul></td>
-      <td>  <span class="resource-description">Created by phil on 1/14/2018.</span>
+          <td>  <span class="datatype-reference">number
+</span>
 </td>
-    </tr>
-    </tbody>
-  </table>
+          <td>  <span class="property-description"></span>
+</td>
+        </tr>
+        <tr>
+          <td>  <span class="property-name">number</span>
+</td>
+          <td>  <span class="datatype-reference">string
+</span>
+</td>
+          <td>  <span class="property-description"></span>
+</td>
+        </tr>
+        <tr>
+          <td>  <span class="property-name">type</span>
+</td>
+          <td>  <span class="datatype-reference">string
+</span>
+</td>
+          <td>  <span class="property-description"></span>
+</td>
+        </tr>
+        <tr>
+          <td>  <span class="property-name">areaCode</span>
+</td>
+          <td>  <span class="datatype-reference">string
+</span>
+</td>
+          <td>  <span class="property-description"></span>
+</td>
+        </tr>
+        <tr>
+          <td>  <span class="property-name">extension</span>
+</td>
+          <td>  <span class="datatype-reference">string
+</span>
+</td>
+          <td>  <span class="property-description"></span>
+</td>
+        </tr>
+        <tr>
+          <td>  <span class="property-name">primary</span>
+</td>
+          <td>  <span class="datatype-reference">boolean
+</span>
+</td>
+          <td>  <span class="property-description"></span>
+</td>
+        </tr>
+        </tbody>
+      </table>
+
+      <p class="lead">Example</p>
+      
+      <pre class="prettyprint language-js example">{
+  &quot;phoneId&quot; : 12345,
+  &quot;number&quot; : &quot;...&quot;,
+  &quot;type&quot; : &quot;...&quot;,
+  &quot;areaCode&quot; : &quot;...&quot;,
+  &quot;extension&quot; : &quot;...&quot;,
+  &quot;primary&quot; : true
+}</pre>
 
         <footer class="footer">
           <div class="container">
