--- a/src/main/webapp/restapi/index.html
+++ b/src/main/webapp/restapi/index.html
@@ -100,7 +100,7 @@
 </td>
       <td class="text-nowrap"><ul class="list-unstyled"><li><samp>  <span class="resource-path">/user</span>
 </samp></li><li><samp>  <span class="resource-path">/user/login</span>
-</samp></li><li><samp>  <span class="resource-path">/user/{id}</span>
+</samp></li><li><samp>  <span class="resource-path">/user/{userId}</span>
 </samp></li></ul></td>
       <td class="text-nowrap"><ul class="list-unstyled"><li><samp>  <span class="label label-default resource-method">GET</span> <span class="label label-default resource-method">POST</span> <span class="label label-default resource-method">PUT</span> 
 </samp></li><li><samp>  <span class="label label-default resource-method">POST</span> 
@@ -124,6 +124,30 @@
       </tr>
     </thead>
     <tbody data-link="row" class="rowlink">
+    <tr class="clickable-row" data-href="json_Address.html">
+      <td>  <span class="datatype-name">Address</span>
+</td>
+      <td>  <span class="datatype-description">2018-12-21</span>
+</td>
+    </tr>
+    <tr class="clickable-row" data-href="json_DAOBean.html">
+      <td>  <span class="datatype-name">DAOBean</span>
+</td>
+      <td>  <span class="datatype-description">2018-12-21</span>
+</td>
+    </tr>
+    <tr class="clickable-row" data-href="json_Email.html">
+      <td>  <span class="datatype-name">Email</span>
+</td>
+      <td>  <span class="datatype-description">2018-12-21</span>
+</td>
+    </tr>
+    <tr class="clickable-row" data-href="json_Phone.html">
+      <td>  <span class="datatype-name">Phone</span>
+</td>
+      <td>  <span class="datatype-description">2018-12-21</span>
+</td>
+    </tr>
     <tr class="clickable-row" data-href="json_User.html">
       <td>  <span class="datatype-name">User</span>
 </td>
